# tuxbox_cdk

./: .cvsignore  FAQ  Makefile.am  README  acinclude.m4  autogen.sh  configure.ac  newmake.files  oldmake.files  prepare  prepare_dream  rules-archive  rules-archive.pl  rules-archive.pl.in  rules-downcheck.pl.in  rules-install  rules-install-flash  rules-install.pl  rules-make  rules-make-cygwin  rules-make.pl  rules.pl  run-cygwin.sh  tuxbox.m4
Patches/: DirectFB.diff  TinyGL.diff  autofs.diff  bash32_039.diff  binutils-uclibc.diff  binutils.diff  bluez-hcidump.diff  busybox-0.60.2.diff  busybox-1.14.2.diff  busybox-flash-ide2.config  busybox-flash.config  busybox-ide.config  busybox.config  busybox.config.m4  busybox.diff  bzip2.diff  console-tools.diff  dbox2-flash.c-26.m4  dbox2-flash.c.m4  default_lc.esml.diff  directfb-0.9.16.diff  dosfstools.diff  dropbear-nopass.diff  dropbear-options.diff  dropbear-options.h  dvbdate.diff  dvbtext.diff  esound.diff  etc.diff  fb_accel_id.diff  fdx.diff  flac.diff  freetype.diff  ftpd.diff  ftpd26.diff  fuse.diff  fusion-full-linux-2.4.22.diff  gcc-4.3.2.diff  gcc-binutils.diff  gcc-core.diff  (+235 more)
Patches/cygwin/: gcc.diff  glibc.diff  linux.diff  ppcboot.diff  qte.diff  u-boot-1.1.1.diff  zlib.diff
config/: busybox.config.m4  dbox2_kernel-2.4.config.m4  dbox2_kernel-2.6.config.m4  flash_map.mutant200s  flash_map.relook200s  flash_map.relook210  flash_map.relook400s  ipbox_kernel-2.6.17.config.m4  u-boot.dbox2.h.m4  uclibc.config.m4
customization/: mkversion  nukegames  nukelanguages
doc/: BUILD.changes  FAQ.en  INSTALL-cygwin.de  INSTALL.de  INSTALL.en  README-flash.de  README-flash.en  README.3rdparty.de  README.3rdparty.en  README.u-boot-via-net  Uboot-Patches
doc/2.4.25.squashfs/: dbox2-flash.c  dbox2.h  readme.squashfs
etc/: .cvsignore  Makefile.am  cables.xml  fstab.in  group  inetd.conf  inittab  ld.so.conf  modules.conf.in  passwd  profile  securetty  services  thttpd.conf
etc/init.d/: AT76C651  Makefile.am  TDA8044H  VES1820  VES1893  VES1993  ldconfig  rcS  rcS.in  start  start_enigma  start_ezap  start_lcars  start_neutrino  start_sshd  startpppd
etc/ppp/: chap-secrets  ip-down  ip-down.local  ip-up  ip-up.local
etc/ppp/peers/: t-online-dsl
make/: automount.mk  bluetooth.mk  bootstrap.mk  buildenv.mk  busybox.mk  ccache.mk  cleantargets.mk  contrib-apps.mk  contrib-libs.mk  database.mk  defaultlocale.mk  defaultvalues.mk  development-tools.mk  distribution-lists.mk  disttargets.mk  dosfstools.mk  dvb-apps.mk  dvb-config.mk  dvb_tools.mk  dvbsnoop.mk  enigma.mk  etc.mk  flash-expand-targets.mk  flash-streampes.mk  flashable-dirs.mk  flashroot-fs.mk  flashroot.mk  ftpd.mk  fullimages.mk  fun.mk  funstuff.mk  high-level-yadd.mk  hostapps.mk  ide-apps.mk  ipbox.mk  java-stuff.mk  lcars.mk  lcd.mk  libdvb++.mk  libdvbsi++.mk  (+25 more)
root/: Makefile.am  Makefile.inc
root/etc/: Makefile.am  auto.net  auto.stuff  directfbrc  exports  fstab  fstab.in  hostname  hosts  inetd.conf  inittab  issue.net  issue.net.ipbox  modules.conf  modules.conf.in  passwd  profile  profile.ipbox  resolv.conf  services  smb.conf  smbpasswd  syslog.conf  termcap  thttpd.conf  timezone.xml
root/etc/init.d/: .cvsignore  05drivers  05drivers.dbox24  09lcdip  10network  10rtc  15syslogd  16lircd  17loadkeys  18openntpd  18rdate  20inetd  25cdkVcInfo  30autofs  30dropbear  30openvpn  30ser2net  31nfsserver  31sambaserver  40tuxcald  40tuxclockd  40tuxmaild  99gui  AT76C651  Makefile.am  TDA8044H  VES1820  VES1893  VES1993  cifs.ipbox  crond.ipbox  functions  halt  halt.ipbox  ide.ipbox  init1.ipbox  initialize  mmc.ipbox  nfs.ipbox  rcK  (+27 more)
root/etc/network/: Makefile.am  interfaces
root/etc/ppp/: pap-secrets
root/share/: Makefile.am
root/share/udhcpc/: Makefile.am  default.script
root_dream/: Makefile.am
root_dream/etc/: Makefile.am  profile  services  timezone.xml  vsftpd.conf
root_dream/etc/init.d/: Makefile.am  rcS  start
root_dream/share/: Makefile.am
root_dream/share/tuxbox/: Makefile.am  satellites.xml
root_dream/share/udhcpc/: Makefile.am  default.script
root_dream/var_init/: Makefile.am
root_dream/var_init/etc/: Makefile.am
root_dream/var_init/etc/init.d/: Makefile.am  start_neutrino
root_dream/var_init/etc/network/: Makefile.am
root_dream/var_init/tuxbox/: Makefile.am
root_dream/var_init/tuxbox/config/: Makefile.am
root_dream/var_init/tuxbox/config/enigma/: Makefile.am
